--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -196,6 +196,15 @@ body {
   }
 }
 
+/* JSON highlight */
+pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
+.string { color: green; }
+.number { color: darkorange; }
+.boolean { color: blue; }
+.null { color: magenta; }
+.key { color: red; }
+
+
 .login{
   max-width: 800px;
   margin: 0 auto;
