--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -300,5 +300,25 @@ h4{
   }
 }
 
+.page-controls{
+  a{
+    font-size: 14px;
+    margin: 10px 0 0 5px;
+    vertical-align: bottom;
+    padding: 2px 5px;
+  }
+}
+
+.breadcrumb{
+  background-color: transparent;
+  margin-bottom: 0;
+  padding: 8px 10px;
+}
+
+a{
+  i{
+    margin-left: 10px;
+  }
+}
 
 
