--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -286,11 +286,30 @@ h4{
   small{
     margin-top: 5px;
   }
+  i{
+    margin-right: 10px;
+    color: #31941C;
+  }
 }
 
 .section{
-  .section-list{
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  box-shadow: 0px 1px 3px #333;
+
+  .row{
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .list-group{
+    margin-top: -10px;
     margin-bottom: 0;
+    .list-group-item {
+      border-left: none;
+      border-right: none;
+      border-radius: 0;
+    }
   }
 }
 
@@ -317,7 +336,7 @@ h4{
 
 a{
   i{
-    margin-left: 10px;
+    margin-left: 5px;
   }
 }
 
@@ -327,4 +346,59 @@ a{
   }
 }
 
+.note{
+  float: right;
+  max-width: 300px;
+  padding: 10px;
+  i{
+    margin-top: 4px;
+    margin-right: 8px;
+    float: left;
+  }
+}
+
+.panel-heading{
+  .btn-bar{
+    float: right;
+    a{
+      background-color: transparent;
+      padding: 0;
+      text-align: center;
+      i{
+        margin: 0;
+      }
+    }
+  }
+}
+
+.select-all{
+  display: inline-block;
+}
+.deselect-all{
+  display: none;
+}
+.all-selected{
+  .select-all{
+    display: none;
+  }
+  .deselect-all{
+    display: inline-block;
+  }
+}
+
+.no-padding{
+  padding: 0 !important;
+}
+
+.breadcrumb > li + li:before {
+  padding: 0 5px;
+  color: #8E8A8A;
+  content: "\f105";
+  font: normal normal normal 14px/1 FontAwesome;
+}
+
+.tooltip {
+  background-color: rgba(100,100,100,0.9);
+  z-index: 1031;
+}
 
