--- a/app/templates/edit-realm.hbs
+++ b/app/templates/edit-realm.hbs
@@ -1,15 +1,14 @@
-<div class='basic-realm-info'>
-  <h4><i class='fa fa-cloud'></i>Basic Realm Information</h4>
-  <div class="row">
-    <div class="col-sm-6">
+<div class="row">
+
+  <div class="col-6-sm section">
+    <div class='basic-realm-info'>
+      <h4><i class='fa fa-cloud'></i>Basic Realm Information</h4>
       <div class='form-group'>
         <label class='control-label'>Realm Name</label>
         {{focus-input id='name' placeholder='New Realm Name' value=model.name
             class='form-control' autocomplete='off'}}
       </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="checkbox">
+       <div class="checkbox">
         <label>
           {{input type='checkbox' id='disabled' checked=model.disabled autocomplete='off'}}
           Disabled
@@ -21,6 +20,12 @@
           Create Test Users
         </label>
       </div>
+    </div>
+  </div>
+
+  <div class="col-6-sm section">
+    <div class='basic-realm-info'>
+      <h4><i class='fa fa-file-text'></i>Open Registrations</h4>
       <div class="checkbox">
         <label>
           {{input type='checkbox' id='admin' checked=model.quick_user}}
@@ -29,7 +34,9 @@
       </div>
     </div>
   </div>
+
 </div>
+
 
 <div class="row">
   <div class="col-sm-6">
@@ -126,69 +133,5 @@
       <i class='fa fa-times danger'></i>
     {{/if}}
     {{model.customTextValidMsg}}
-  </div>
-</div>
-
-<div class="modal fade" id='editRoleModal'>
-  <div class='modal-dialog'>
-    <div class='modal-content'>
-      <div class='modal-header'>{{#if editedRole.isNew}}Add New{{else}}Edit{{/if}} Role</div>
-      <div class='modal-body'>
-        <div class="row">
-      <div class="col-xs-12">
-        <form {{action 'saveRole' on='submit'}} id="editRoleForm" role='form' autocomplete='off'>
-          <div class="form-group">
-            <label class='control-label'>Role Name</label>
-            {{#if editedRole.isNew}}
-              {{input placeholder='Role Name' value=editedRoleName class='form-control'}}
-            {{else}}
-              <span>{{editedRoleName}}</span>
-            {{/if}}
-          </div>
-          {{#each editedRolePermissionGroups as |permissionGroup|}}
-            <div class="panel panel-default collapsible">
-              <div class="panel-heading" role="tab">
-                <a data-toggle="collapse" data-parent="#bridgeitPermissions" class='toggle'
-                  onclick="$(this).closest('.panel').find('.collapse').collapse('toggle');$(this).find('i').toggleClass('hidden');">
-                  <strong class="panel-title">
-                    <i class='fa fa-caret-right hidden'></i>
-                    <i class='fa fa-caret-down'></i>
-                    {{permissionGroup.service}} Permissions
-                  </strong>
-                </a>
-                <div class='btn-bar'>
-                  <a {{action 'selectAllServicePermissionsForRole' permissionGroup.service}}
-                    class='btn btn-sm btn-default'>Select All</a>
-                  <a {{action 'deselectAllServicePermissionsForRole' permissionGroup.service}}
-                    class='btn btn-sm btn-default'>Deselect All</a>
-                </div>
-              </div>
-              <div class='panel-collapse collapse in' role="tabpanel" >
-                <ul class='list-group'>
-                  {{#each permissionGroup.permissions as |p|}}
-                    <li class='list-group-item clearfix'>
-                      <span class='checkbox'>
-                        <label>
-                          {{input type='checkbox' checked=p.selected}}
-                          {{p.label}}
-                        </label>
-                      </span>
-                    </li>
-                  {{/each}}
-                </ul>
-              </div>
-            </div>
-          {{/each}}
-        </form>
-      </div>
-    </div>
-      </div>
-      <div class="modal-footer">
-        <div class='btn-bar page-controls pull-right'>
-          <a class="btn btn-lg btn-default login-btn" {{action 'cancelEditedRole'}}>Cancel</a>
-          <a class="btn btn-lg btn-primary login-btn" {{action 'saveEditedRole'}}>Save</a>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
