--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -59,6 +59,12 @@
 {{outlet}}
 </div> <!-- /container -->
 
+<footer class="footer">
+  <div class="container">
+    <p class="text-muted">Place sticky footer content here.</p>
+  </div>
+</footer>
+
 <div class="modal fade danger" id='errorModal'>
   <div class='modal-dialog'>
     <div class='modal-content'>
