--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -402,3 +402,48 @@ a{
   z-index: 1031;
 }
 
+.optional-info{
+  &.ul, ul{
+    padding-left: 10px;
+  }
+  li{
+    list-style: none;
+  }
+  .group-heading{
+    padding-bottom: 5px;
+    border-bottom: 1px solid #efefef;
+    margin-bottom: 5px;
+    text-align: right;
+    margin-left: -25px;
+
+    i.fa-caret-down{
+      margin: 10px;
+    }
+
+    &.closed{
+      i.fa-caret-down{ 
+        transform: rotate(-90deg);
+      }
+    }
+  }
+  .group-list{
+    -moz-transition: height 200ms;
+    -o-transition: height 200ms;
+    -webkit-transition: height 200ms;
+    transition: height 200ms;
+    overflow-y: hidden;
+
+    &.closed{
+      max-height: 0;
+    }
+  }
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
