--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,12 @@
+html{
+  position: relative;
+  min-height: 100%;
+}
+
 body {
-  padding-top: 70px;
+  padding-top: 50px;
   padding-bottom: 30px;
+  margin-bottom: 60px;
 }
 
 .navbar-inverse {
@@ -197,7 +203,7 @@ body {
 }
 
 /* JSON highlight */
-pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
+pre {padding: 5px; margin: 5px; border: none; background-color: transparent;}
 .string { color: green; }
 .number { color: darkorange; }
 .boolean { color: blue; }
@@ -207,7 +213,7 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
 
 .login{
   max-width: 800px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 .page-header {
@@ -445,5 +451,9 @@ a{
   width: 100%;
   height: 60px;
   background-color: #f5f5f5;
+
+  .text-muted {
+    margin: 20px 0;
+  }
 }
 
