--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -113,6 +113,11 @@ body {
 
 .form-group.has-error {
   margin-bottom: 0;
+  .text-danger{
+    margin-top: -1px;
+    margin-bottom: -1px;
+    display: block;
+  }
 }
 
 .list-group-item label input[type=checkbox] {
@@ -213,6 +218,10 @@ pre {padding: 5px; margin: 5px; border: none; background-color: transparent;}
 
 .login{
   max-width: 800px;
+  margin: 20px auto;
+}
+
+.register{
   margin: 20px auto;
 }
 
@@ -457,3 +466,24 @@ a{
   }
 }
 
+.jumbotron{
+  margin-top: 20px;
+}
+
+.col-ops{
+  min-width: 80px;
+  text-align: center;
+}
+.col-roles{
+  max-width: 200px;
+  white-space: wrap;
+}
+.col-checkbox{
+  max-width: 60px;
+  text-align: center;
+}
+
+.modal-top-btns{
+  text-align: right;
+  margin-bottom: 10px;
+}
