--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -474,10 +474,6 @@ a{
   min-width: 80px;
   text-align: center;
 }
-.col-roles{
-  max-width: 200px;
-  white-space: wrap;
-}
 .col-checkbox{
   max-width: 60px;
   text-align: center;
@@ -486,4 +482,12 @@ a{
 .modal-top-btns{
   text-align: right;
   margin-bottom: 10px;
+}
+
+.clone-realm-log{
+  textarea{
+    width: 100%; 
+    border: none; 
+    color: #333;
+  }
 }
