re-add realm role functionality

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -474,6 +474,10 @@ a{
   min-width: 80px;
   text-align: center;
 }
+.col-roles{
+  max-width: 200px;
+  white-space: wrap;
+}
 .col-checkbox{
   max-width: 60px;
   text-align: center;
