--- a/app/templates/clone-realm-modal.hbs
+++ b/app/templates/clone-realm-modal.hbs
@@ -33,7 +33,7 @@
         </div>
         <div class="modal-footer">
           <div class='btn-bar pull-right'>
-            <a class="btn btn-lg btn-default login-btn" {{action 'cancelCloneRealm'}}>Cancel</a>
+            <a class="btn btn-lg btn-default login-btn" {{action 'cancelCloneRealm'}}>Close</a>
             <a class="btn btn-lg btn-primary login-btn" {{action 'cloneRealm'}}>Clone Realm</a>
           </div>
         </div>
