--- a/app/templates/edit-role-modal.hbs
+++ b/app/templates/edit-role-modal.hbs
@@ -27,7 +27,7 @@
               {{#each editedRolePermissionGroups as |permissionGroup|}}
                 <div class="panel panel-default collapsible {{if permissionGroup.allPermissionsSelected 'all-selected'}}">
                   <div class="panel-heading" role="tab">
-                    <a data-toggle="collapse" data-parent="#bridgeitPermissions" class='toggle'
+                    <a data-toggle="collapse" data-parent="#voyentPermissions" class='toggle'
                       onclick="$(this).closest('.panel').find('.collapse').collapse('toggle');$(this).find('i').toggleClass('hidden');">
                       <strong class="panel-title">
                         <i class='fa fa-caret-right hidden'></i>
